--- a/app/src/main/res/layout/activity_questionnaire_list.xml
+++ b/app/src/main/res/layout/activity_questionnaire_list.xml
@@ -4,6 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".questionnaire.QuestionnaireListActivity">
+    tools:context=".questionnaire.ui.QuestionnaireListActivity">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/questionnaire_list_recycler_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </android.support.constraint.ConstraintLayout>
