--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorGreen">#009900</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorIndigo">#4b0082</color>
+    <color name="colorBlue">#003366</color>
 </resources>
