--- a/app/src/main/res/layout/activity_question_layout.xml
+++ b/app/src/main/res/layout/activity_question_layout.xml
@@ -21,6 +21,7 @@
         app:layout_constraintVertical_weight="1" />
 
     <Button
+        android:theme="@style/PrimaryButton"
         android:id="@+id/next_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
