--- a/app/src/main/res/layout/activity_questionnaire_result.xml
+++ b/app/src/main/res/layout/activity_questionnaire_result.xml
@@ -47,13 +47,14 @@
         app:layout_constraintTop_toBottomOf="@+id/total_points_textview" />
 
     <Button
-        android:id="@+id/button"
+        android:theme="@style/PrimaryButton"
+        android:id="@+id/go_to_main_button"
         android:layout_width="381dp"
         android:layout_height="85dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Button"
+        android:text="@string/ok"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
