--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#b00000</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorGreen">#009900</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorIndigo">#4b0082</color>
     <color name="colorBlue">#003366</color>
-    <color name="colorDarkRed">#ba2d65</color>
+    <color name="colorDarkRed">#b00000</color>
     <color name="red">#F44336</color>
     <color name="black">#000000</color>
 </resources>
